fix: Code sample layout in docs on narrow screens
#32

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -165,6 +165,14 @@
         font-size: 20px;
       }
     }
+    > .body {
+      pre {
+        overflow-x: scroll;
+        line-height: 1;
+        font-size: 80%;
+        white-space: pre-wrap;
+      }
+    }
   }
 
   @media screen and (min-width: $bigscreen-breakpoint) {
@@ -183,15 +191,6 @@
       > header,
       > .body {
         margin-left: 60px;
-      }
-      .body {
-        pre {
-          overflow-x: scroll;
-          line-height: 1;
-          > code {
-            font-size: 80%;
-          }
-        }
       }
     }
   }
